feat: Change Kannada to English and update movie details

--- a/home.html
+++ b/home.html
@@ -147,7 +147,7 @@
 
 
             <div class="container" id="Movies">
-                <h3>Kannada</h3>
+                <h3>English</h3>
                 <hr>
                 <div class="poster">
                     <div class="flip-card_i">
@@ -200,10 +200,10 @@
                                 <img src="./Images/dark knight.jpg" alt="Avatar" style="width:250px;height:360px;">
                             </div>
                             <div class="flip-card-back_i">
-                                <h1 style="font-size: 30px;">The Dark Knight</h1>
-                                <button class="btn_i b3_i" title="Year" style="color:white">2008</button>
-                                <button class="btn_i b2_i" title="Minutes" style="color:white">2h32m<button>
-                  <button class="btn_i b1_i"  title="IMDb" style="color:white">9.0</button>
+                                <h1 style="font-size: 30px;">Deadpool & Wolverine Trailer</h1>
+                                <button class="btn_i b3_i" title="Year" style="color:white">2023</button>
+                                <button class="btn_i b2_i" title="Minutes" style="color:white">2.25M<button>
+                  <button class="btn_i b1_i"  title="IMDb" style="color:white">0.0</button>
                                 </span>
                                 <br />
                                 <br />
